quorum/test/tests/TypeChecker/Pass/ExpAssignTextNumber.quorum
text t = cast(text, 7.5)