quorum/test/tests/TypeChecker/Fail/ExpAssignTextObjIntObj.quorum
Integer int
int:SetValue(5)
Text t = cast(Text, int)